add users route
